# gurgle

./: AUTHORS  BUGS  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.in  gurgle.spec  mkinstalldirs
doc/: Makefile.am  Makefile.in  fdl.texi  gurgle.dvi  gurgle.html  gurgle.info  gurgle.ps  gurgle.texi  stamp-vti
src/: Makefile.am  Makefile.in  config.h  debug.c  equate.c  filter.c  gnusql.ec  grg.h  guile.c  ingres.sc  main.c  mysql.c  parser.c  pattern.c  postgres.c  scanner.c  scanner.l  sort.c  utility.c
src/dbase/: Makefile.am  Makefile.in  dbase.c  dbase.h
